--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "scrapybara"
-version = "0.1.1"
+version = "0.1.2"
 description = "Official Python client for Scrapybara"
 authors = ["Scrapybara <hello@scrapybara.com>"]
 readme = "README.md"
@@ -23,11 +23,9 @@ classifiers = [
 python = ">=3.8"
 requests = ">=2.25.1"
 anthropic = "^0.39.0"
-pytest = "^8.3.3"
-pytest-asyncio = "^0.23.5"
+pydantic = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = ">=8.3.3"
 black = "^23.0"
 isort = "^5.0"
 ipykernel = "^6.29.5"
