--- a/.fernignore
+++ b/.fernignore
@@ -1,5 +1,6 @@
 # Specify files that shouldn't be modified by Fern
 
 src/scrapybara/client.py
+src/scrapybara/anthropic/
 tests/custom/test_client.py
 .github/workflows/ci.yml
