--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ httpx = ">=0.21.2"
 pydantic = ">= 1.9.2"
 pydantic-core = "^2.18.2"
 typing_extensions = ">= 4.0.0"
+anthropic = "^0.40.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "1.0.1"
