--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,5 @@ jobs:
         run: poetry install
       - name: Publish to pypi
         run: |
-          poetry config repositories.remote https://upload.pypi.org/legacy/
           poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-          poetry --no-interaction -v publish --build --repository remote
+          poetry --no-interaction -v publish --build
