add SYSTEM_PROMPT + image_result

--- a/.fernignore
+++ b/.fernignore
@@ -2,7 +2,9 @@
 
 src/scrapybara/client.py
 src/scrapybara/anthropic/
+src/scrapybara/prompts/
 src/scrapybara/tools/
 src/scrapybara/types/act.py
+src/scrapybara/types/tool.py
 tests/custom/test_client.py
 .github/workflows/ci.yml
