--- a/.fernignore
+++ b/.fernignore
@@ -3,6 +3,7 @@
 src/scrapybara/client.py
 src/scrapybara/anthropic/
 src/scrapybara/herd/
+src/scrapybara/openai/
 src/scrapybara/prompts/
 src/scrapybara/tools/
 src/scrapybara/types/__init__.py
